# scikit-learner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
frontend/: index.html
frontend/css/: styles.css
frontend/data/: airfoil.csv
frontend/js/: app.js  pyodide-bridge.js
frontend/py/: learner.py
landing/: CNAME  index.html
scikit_learner/: __main__.py  cli.py
